--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest package="com.furnictureshopping"
   xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
     android:name=".AppController"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:supportsRtl="true"
+    android:usesCleartextTraffic="true"
     android:theme="@style/AppTheme">
+    <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     <activity
       android:name=".AboutUs"
       android:exported="false" />
